--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "joi": "^10.6.0",
+    "node-sass": "^4.5.3",
     "object-path": "^0.11.4",
+    "sass-loader": "^6.0.6",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
     "vue-server-renderer": "^2.3.4",
