--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": ">=5.0"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "joi": "^10.6.0",
