--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "private": true,
   "scripts": {
     "dev": "supervisor server",
-    "start": "cross-env NODE_ENV=production node server"
+    "start": "cross-env NODE_ENV=production node server",
+    "db:migrate": "db-migrate up --config src-backend/config/database.json --migrations-dir src-backend/migrations",
+    "db:migrate:down": "db-migrate down --config src-backend/config/database.json --migrations-dir src-backend/migrations",
+    "test:backend": "./bin/resetdb && mocha --require=env-test --timeout 5000 src-backend/test/**/*.test.js"
   },
   "engines": {
     "node": ">=8.0",
     "npm": ">=5.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "db-migrate": "^0.10.0-beta.20",
+    "db-migrate-pg": "^0.2.4",
     "express": "^4.15.3",
     "joi": "^10.6.0",
     "object-path": "^0.11.4",
+    "pg-promise": "^6.1.2",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0",
     "vue-server-renderer": "^2.3.4",
@@ -27,13 +35,18 @@
     "babel-loader": "^7.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.5.2",
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.0.0",
     "cross-env": "^4.0.0",
     "css-loader": "^0.28.4",
+    "env-test": "^1.0.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
     "memory-fs": "^0.4.1",
+    "mocha": "^3.4.2",
+    "shelljs": "^0.7.8",
     "supervisor": "^0.12.0",
     "sw-precache-webpack-plugin": "^0.11.3",
     "vue-loader": "^12.2.1",
